crates/biome_cli/tests/snapshots/main_commands_ci/ci_does_not_enable_assist.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --assist-enabled=false file.js
```

## `file.js`

```js
import z from "zod"; 
 import foo from "foo";
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
  > 1 │ import z from "zod";·
      │        ^
    2 │  import foo from "foo";
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 │ import·z·from·"zod";·
      │ ---------------------

```

```block
file.js:2:9 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ import z from "zod";·
  > 2 │  import foo from "foo";
      │         ^^^
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 1 │   import z from "zod";·
    2   │ - ·import·foo·from·"foo";
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - import·z·from·"zod";·
    2   │ - ·import·foo·from·"foo";
      1 │ + import·z·from·"zod";
      2 │ + import·foo·from·"foo";
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 2 warnings.
```
