crates/biome_cli/tests/snapshots/main_commands_ci/ci_does_not_run_formatter_biome_jsonc.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci file.js
```

## `biome.jsonc`

```json
{
  // I am a comment
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
