crates/biome_cli/tests/snapshots/main_commands_ci/ci_does_not_run_formatter_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --formatter-enabled=false file.js
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
