crates/biome_cli/tests/snapshots/main_commands_ci/ci_errors_for_all_disabled_checks.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --linter-enabled=false --formatter-enabled=false --assist-enabled=false file.js
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `file.js`

```js
statement(    ) ; let a = !b || !c;
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The combination of configuration and arguments is invalid: 
    Formatter, linter and assist are disabled, can't perform the command. At least one feature needs to be enabled. This is probably and error.
  


```
