crates/biome_cli/tests/snapshots/main_commands_ci/ci_formatter_linter_organize_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci file.js
```

## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  },
  "assist": {
    "enabled": true
  }
}
```

## `file.js`

```js

import { B, C } from "b.js"
import A from "a.js"


something( )
    
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:2:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
  > 2 │ import { B, C } from "b.js"
      │        ^^^^^^^^
    3 │ import A from "a.js"
    4 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1   │ - 
    2   │ - import·{·B,·C·}·from·"b.js"
      1 │ + 
    3 2 │   import A from "a.js"
    4 3 │   
  

```

```block
file.js:3:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    2 │ import { B, C } from "b.js"
  > 3 │ import A from "a.js"
      │        ^
    4 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 1 │   
    2 2 │   import { B, C } from "b.js"
    3   │ - import·A·from·"a.js"
    4 3 │   
    5 4 │   
  

```

```block
file.js:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Sort these imports.
  
  > 2 │ import { B, C } from "b.js"
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 3 │ import A from "a.js"
      │ ^^^^^^^^^^^^^^^^^^^^
    4 │ 
  
  i Safe fix: Organize imports and exports (Biome)
  
    1 1 │   
    2   │ - import·{·B,·C·}·from·"b.js"
    3   │ - import·A·from·"a.js"
      2 │ + import·A·from·"a.js"
      3 │ + import·{·B,·C·}·from·"b.js"
    4 4 │   
    5 5 │   
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - 
    2   │ - import·{·B,·C·}·from·"b.js"
    3   │ - import·A·from·"a.js"
    4   │ - 
      1 │ + import·{·B,·C·}·from·"b.js";
      2 │ + import·A·from·"a.js";
    5 3 │   
    6   │ - something(·)
    7   │ - ····
      4 │ + something();
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
Found 2 warnings.
```
