crates/biome_cli/tests/snapshots/main_commands_ci/ci_lint_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci ci.js
```

## `ci.js`

```js
for(;true;);

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
ci.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
ci.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1 │ for·(;·true;·);
      │    +  +     +  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
